# SO_PROJETO

./: CMakeLists.txt  README.md  main.c
child/: CMakeLists.txt  main.c
child/data/: out0.txt  out1.txt  out2.txt
child/src/: myDataChild.c  myDataChild.h  objectiveB.c  objectiveB.h  objectiveC.c  objectiveC.h  objectiveD.c  objectiveD.h
data/: all_timestamps2.csv  numberCores  numberLines  objectiveC_A  objectiveD  outMapReduced.txt  outProducerConsumer.txt  outProducerConsumerParseYears2006.txt  outProducerConsumerParseYears2009.txt  outProducerConsumerParseYears2012.txt  outProducerConsumerParseYears2015.txt  outThreads.txt
py/: plot.py
src/: myData.c  myData.h  myDataTimeCount.c  myDataTimeCount.h  objectiveA_parte2.c  objectiveA_parte2.h  objectiveB_parte2.c  objectiveB_parte2.h  objectiveC_parte2.c  objectiveC_parte2.h  objectiveD.c  objectiveD.h  objectiveD_parte2.c  objectiveD_parte2.h  objectives.c  objectives.h
